#8308 : Potentially fixed the scrolling issue with toolbar combos on iOS.
git-svn-id: https://svn.ckeditor.com/CKEditor/trunk@7246 da63caf2-3823-0410-a1e8-d69ccee00dfb

--- a/_source/skins/v2/panel.css
+++ b/_source/skins/v2/panel.css
@@ -16,6 +16,9 @@ For licensing, see LICENSE.html or http://ckeditor.com/license
 	-moz-border-radius: 3px;
 	-webkit-border-radius: 3px;
 	border-radius: 3px;
+
+	overflow:scroll;
+	-webkit-overflow-scrolling: touch;
 }
 
 /* Ideally we would use "inherit here"... but you know... IE :( */
